src/photo-service/k8s-photo.yml
apiVersion: v1
kind: Service
metadata:
  name: photo-service
spec:
  ports:
    - port: 80
      protocol: TCP
  selector:
    app: photo-service

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: photo-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: photo-service
  template:
    metadata:
      labels:
        app: photo-service
    spec:
      containers:
        - name: photo-service
          image: gitlab-devops.cloud.rennes.enst-bretagne.fr:4567/ablanc/devops-f22-g00/photo:latest 
          imagePullPolicy: Always
          resources:
           limits:
              memory: "512Mi"
              cpu: "1"
          ports:
            - containerPort: 80
      imagePullSecrets:
      - name: regcred
